--- a/src/styles.css
+++ b/src/styles.css
@@ -62,7 +62,7 @@ a:active {
 .header {
   display: flex;
   color: #FFF;
-  background-color: red;
+  background-color: #81ff5e;
   border-bottom: 1px solid rgb(150, 0, 154);
   grid-column-start: 1;
   grid-column-end:   3;
